# ppb_recalls

./: .env  .gitignore  README.md  pyproject.toml  requirements  requirements.txt  research_paper_ideas.txt  scrape.py
data/csv/: product_info.csv  recalls_combined.csv
data/rapid_alerts_pdfs/: download.py  scrape_data.py
data/recalls/: products_pdfs.py  recalls_2016_2021.py  recalls_2022_2025.py
notebooks/: 01_EDA.ipynb  Merge CSVs and EDA.ipynb  eda_2022_2025_reasons.ipynb  eda_manufacturers_2022_2025.ipynb
recall_dashboard/: app.py
src/: category_reasons.py  db_config.py  health_check.py  ingest_pdfs.py  init_db.py  load_data.py  models.py  rag_query.py  recalls_2022_2025.py  recalls_2022_2025info.py  scrape_data.py  test_model.py
