[project]
name = "steward"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "httpx>=0.28.1",
    "ipykernel>=6.30.0",
    "mcp[cli]>=1.6.0",
    "pandas>=2.3.1",
    "pdfminer-six>=20250506",
    "requests>=2.32.4",
]
